dynamically fetch scores

--- a/index.html
+++ b/index.html
@@ -26,43 +26,13 @@ Combat XP
 <th> </th><th class="right">XP</th>
 </tr>
 </thead>
-<tbody>
+<tbody id="personal-hiscores__tbody">
 <tr>
 <td width="60"></td>
 <td width="190"></td>
 <td width="0"></td>
 <td width="100"></td>
 </tr>
-
-<!-- ################################################################################## -->
-
-<tr class="personal-hiscores__row"><td class="right">1</td><td class="left">Nes</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">2</td><td class="left">Me Re</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">3</td><td class="left">uT Tu</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">4</td><td class="left">Rixcy</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">5</td><td class="left">Vineworm</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">6</td><td class="left">Vinewyrm</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">7</td><td class="left">Shagnussen</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">8</td><td class="left">Magbay</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">9</td><td class="left">Bareback RS</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">10</td><td class="left">Hardcore Gor</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">11</td><td class="left">Sililly</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">12</td><td class="left">Whvki</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">13</td><td class="left">Chronicular</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">14</td><td class="left">Fe Rixcy</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">15</td><td class="left">Prob afk rn</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">16</td><td class="left">Lyrial Era</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">17</td><td class="left">Jinx Reborn</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">18</td><td class="left">Hench</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">19</td><td class="left">Loose Armor</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">20</td><td class="left">Juicer 1</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">21</td><td class="left">MrKite</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">22</td><td class="left">HeyImDeku</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">23</td><td class="left">LfEGirlMeows</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">24</td><td class="left">Iron Link98</td><td></td><td class="right">0</td></tr>
-<tr class="personal-hiscores__row"><td class="right">25</td><td class="left">stop fishing</td><td></td><td class="right">0</td></tr>
-
-<!-- ################################################################################## -->
 
 </tbody>
 </table>
@@ -76,4 +46,5 @@ Combat XP
 <div id="footerHiscores"></div>
 </div>
 </div>
+<script src="values.js"></script>
 </body></html>
