--- a/index.html
+++ b/index.html
@@ -3,48 +3,59 @@
 <html>
 
 <head>
-<link href="rshiscore.css" rel="stylesheet" type="text/css" media="all">
+  <title>Social BTW</title>
+  <link href="rshiscore.css" rel="stylesheet" type="text/css" media="all">
+</head>
 
-<br>
-<div align="center">
+<body>
+  <br>
+  <div align="center">
 
-<div class="personal-hiscores__table">
-<div id="col2">
-<div id="headerHiscores"></div>
-<div class="hiscoresHiddenBG">
-<div id="contentHiscores">
-<table>
-<caption>
-<!-- <img class="miniimg" src="org.png"> -->
-Combat XP
-</caption>
+    <div class="personal-hiscores__table">
+      <div id="col2">
+        <div id="headerHiscores"></div>
+        <div class="hiscoresHiddenBG">
+          <div id="contentHiscores">
+            <table>
+              <caption>
+                <!-- <img class="miniimg" src="org.png"> -->
+                Combat XP
+              </caption>
 
-<thead>
-<tr>
-<th class="right">Rank</th>
-<th class="left">Name</th>
-<th> </th><th class="right">XP</th>
-</tr>
-</thead>
-<tbody id="personal-hiscores__tbody">
-<tr>
-<td width="60"></td>
-<td width="190"></td>
-<td width="0"></td>
-<td width="100"></td>
-</tr>
+              <thead>
+                <tr>
+                  <th class="right">Rank</th>
+                  <th class="left">Name</th>
+                  <th> </th>
+                  <th class="right">XP</th>
+                </tr>
+              </thead>
+              <tbody id="personal-hiscores__tbody">
+                <tr>
+                  <td width="60"></td>
+                  <td width="190"></td>
+                  <td width="0"></td>
+                  <td width="100"></td>
+                </tr>
 
-</tbody>
-</table>
+              </tbody>
+            </table>
 
-<nav class="personal-hiscores__pagination">
-<img alt="Scroll Down" src="https://www.runescape.com/img/rsp777/hiscores/arrow_down.gif">
-</nav>
+            <nav class="personal-hiscores__pagination">
+              <img alt="Scroll Down" src="https://www.runescape.com/img/rsp777/hiscores/arrow_down.gif">
+            </nav>
 
-</div>
-</div>
-<div id="footerHiscores"></div>
-</div>
-</div>
-<script src="values.js"></script>
-</body></html>
+          </div>
+        </div>
+        <div id="footerHiscores"></div>
+      </div>
+    </div>
+    <script src="values.js"></script>
+    <script>
+
+      getScores(25);
+
+    </script>
+</body>
+
+</html>
