--- a/defense.html
+++ b/defense.html
@@ -16,7 +16,19 @@
 <table>
 <caption>
 <!-- <img class="miniimg" src="org.png"> -->
-Defense XP
+<div class="dropdown">
+  <button class="dropbtn">Defense XP ▼</button>
+  <div class="dropdown-content">
+    <a href="index.html">Combat</a>
+    <a href="attack.html">Attack</a>
+    <a href="defense.html">Defense</a>
+    <a href="hitpoints.html">Hitpoints</a>
+    <a href="magic.html">Magic</a>
+    <a href="prayer.html">Prayer</a>
+    <a href="range.html">Range</a>
+    <a href="strength.html">Strength</a>
+  </div>
+</div>
 </caption>
 
 <thead>
