--- a/index.html
+++ b/index.html
@@ -19,7 +19,19 @@
             <table>
               <caption>
                 <!-- <img class="miniimg" src="org.png"> -->
-                Combat XP
+                <div class="dropdown">
+                  <button class="dropbtn">Combat XP ▼</button>
+                  <div class="dropdown-content">
+                    <a href="index.html">Combat</a>
+                    <a href="attack.html">Attack</a>
+                    <a href="defense.html">Defense</a>
+                    <a href="hitpoints.html">Hitpoints</a>
+                    <a href="magic.html">Magic</a>
+                    <a href="prayer.html">Prayer</a>
+                    <a href="range.html">Range</a>
+                    <a href="strength.html">Strength</a>
+                  </div>
+                </div>
               </caption>
 
               <thead>
@@ -53,7 +65,6 @@
     <script src="values.js"></script>
     <script>
 
-      getScores(25);
 
     </script>
 </body>
