rate limit handling + loading

--- a/attack.html
+++ b/attack.html
@@ -45,6 +45,10 @@
 <td width="0"></td>
 <td width="100"></td>
 </tr>
+<tr id="personal-hiscores__loading">
+  <td></td>
+  <td>Loading...</td>
+</tr>
 
 </tbody>
 </table>
