change all links to index.html to /

--- a/defense.html
+++ b/defense.html
@@ -19,7 +19,7 @@
 <div class="dropdown">
   <button class="dropbtn">Defense XP ▼</button>
   <div class="dropdown-content">
-    <a href="index.html">Combat</a>
+    <a href="/">Combat</a>
     <a href="attack.html">Attack</a>
     <a href="defense.html">Defense</a>
     <a href="hitpoints.html">Hitpoints</a>
