--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
                 <div class="dropdown">
                   <button class="dropbtn">Combat XP ▼</button>
                   <div class="dropdown-content">
-                    <a href="index.html">Combat</a>
+                    <a href="/">Combat</a>
                     <a href="attack.html">Attack</a>
                     <a href="defense.html">Defense</a>
                     <a href="hitpoints.html">Hitpoints</a>
-                    <a href="magic.html">Magic</a>
+                    <a href="magic" type="text/html">Magic</a>
                     <a href="prayer.html">Prayer</a>
                     <a href="range.html">Range</a>
                     <a href="strength.html">Strength</a>
