down for maintenance page

--- a/index.html
+++ b/index.html
@@ -16,56 +16,14 @@
         <div id="headerHiscores"></div>
         <div class="hiscoresHiddenBG">
           <div id="contentHiscores">
-            <table>
-              <caption>
-                <!-- <img class="miniimg" src="org.png"> -->
-                <div class="dropdown">
-                  <button class="dropbtn">Combat XP ▼</button>
-                  <div class="dropdown-content">
-                    <a href="/">Combat</a>
-                    <a href="attack.html">Attack</a>
-                    <a href="defense.html">Defense</a>
-                    <a href="hitpoints.html">Hitpoints</a>
-                    <a href="magic.html">Magic</a>
-                    <a href="prayer.html">Prayer</a>
-                    <a href="range.html">Range</a>
-                    <a href="strength.html">Strength</a>
-                  </div>
-                </div>
-              </caption>
-
-              <thead>
-                <tr>
-                  <th class="right">Rank</th>
-                  <th class="left">Name</th>
-                  <th> </th>
-                  <th class="right">XP</th>
-                </tr>
-              </thead>
-              <tbody id="personal-hiscores__tbody">
-                <tr>
-                  <td width="60"></td>
-                  <td width="190"></td>
-                  <td width="0"></td>
-                  <td width="100"></td>
-                </tr>
-                <tr id="personal-hiscores__loading">
-                  <td></td>
-                  <td>Loading...</td>
-                </tr>
-
-              </tbody>
-            </table>
-
+            <img id="gone-fishing" src="gone-fishing.jpg" />
+            <br/>
+            <b>Down for maintenance</b>
           </div>
         </div>
         <div id="footerHiscores"></div>
       </div>
     </div>
-    <script src="values.js"></script>
-    <script>
-      getScores(25);
-    </script>
 </body>
 
 </html>
