--- a/construction.html
+++ b/construction.html
@@ -17,16 +17,14 @@
 <caption>
 <!-- <img class="miniimg" src="org.png"> -->
 <div class="dropdown">
-  <button class="dropbtn">Attack XP ▼</button>
+  <button class="dropbtn">Construction XP ▼</button>
   <div class="dropdown-content">
-    <a href="/">Combat</a>
-    <a href="attack.html">Attack</a>
-    <a href="defense.html">Defense</a>
-    <a href="hitpoints.html">Hitpoints</a>
-    <a href="magic.html">Magic</a>
-    <a href="prayer.html">Prayer</a>
-    <a href="range.html">Range</a>
-    <a href="strength.html">Strength</a>
+    <a href="/">Utility</a>
+    <a href="slayer.html">Slayer</a>
+    <a href="thieving.html">Thieving</a>
+    <a href="firemaking.html">Firemaking</a>
+    <a href="construction.html">Construction</a>
+    <a href="agility.html">Agility</a>
   </div>
 </div>
 </caption>
@@ -62,7 +60,7 @@
 <script src="values.js"></script>
 <script>
 
-getScores(10, 'attack');
+getScores(10, 'construction');
 
 </script>
 </body></html>
