--- a/index.html
+++ b/index.html
@@ -20,16 +20,14 @@
               <caption>
                 <!-- <img class="miniimg" src="org.png"> -->
                 <div class="dropdown">
-                  <button class="dropbtn">Combat XP ▼</button>
+                  <button class="dropbtn">Utility XP ▼</button>
                   <div class="dropdown-content">
-                    <a href="/">Combat</a>
-                    <a href="attack.html">Attack</a>
-                    <a href="defense.html">Defense</a>
-                    <a href="hitpoints.html">Hitpoints</a>
-                    <a href="magic.html">Magic</a>
-                    <a href="prayer.html">Prayer</a>
-                    <a href="range.html">Range</a>
-                    <a href="strength.html">Strength</a>
+                    <a href="/">Utility</a>
+                    <a href="slayer.html">Slayer</a>
+                    <a href="thieving.html">Thieving</a>
+                    <a href="firemaking.html">Firemaking</a>
+                    <a href="construction.html">Construction</a>
+                    <a href="agility.html">Agility</a>
                   </div>
                 </div>
               </caption>
